# websocket-webrtc-django

./: db.sqlite3  pyproject.toml
audio/: models.py  views.py
backend/: Justfile  asgi.py  routing.py
backend/audio/: consumers.py  routing.py
backend/backend/: routing.py  settings.py
frontend/src/app/: app.component.spec.ts  app.component.ts
videoCall/backend/: pyproject.toml
videoCall/backend/audio/: consumers.py
videoCall/backend/audio/templates/audio/: index.html  room.html
videoCall/backend/backend/: asgi.py  settings.py  urls.py
videoCall/frontend/src/: index.html
videoCall/up/: Justfile  README.md  angular.json  package-lock.json  package.json
