[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["qdgta <63296827+qdgta@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
channels = "^4.0.0"
daphne = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
